<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A7541"
    tools:context=".SignInMainActivity">


    <TextView
        android:id="@+id/textBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/cheat_poker"
        android:textAlignment="center"
        android:textSize="65sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textBannerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/cards_lies_and_strategy"
        android:textSize="22sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBannerDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineProvider="none"
        android:textSize="22sp" />


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#9E1414"
        android:text="sign in"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="130dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="25dp"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraint" />

</RelativeLayout>