<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A7541"
    tools:context=".MainActivity"
    android:id="@+id/activity5">



    <TextView
        android:id="@+id/textBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/cheat_poker"
        android:textAlignment="center"
        android:textSize="65sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textBannerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/cards_lies_and_strategy"
        android:textSize="22sp"
        android:textStyle="italic" />


    <Button
        android:id="@+id/btnOnlineGame"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#9E1414"
        android:text="Online Game" />

    <Button
        android:id="@+id/btnPrivateGame"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#9E1414"
        android:text="Private Game" />

    <TextView
        android:id="@+id/rules"
        android:layout_width="161dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="38dp"
        android:text="Rules"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textPopupRules"
        android:layout_width="395dp"
        android:layout_height="345dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="190dip"
        android:layout_marginEnd="5dp"
        android:gravity="right"
        android:text="@string/rules"
        android:textSize="18dp"
        android:visibility="gone" />


    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#9E1414"
        android:text="sign out"
        android:textSize="10dp" />

</RelativeLayout>